force-app/main/default/objects/G2Crowd__G2_Related_Organization__c/G2Crowd__G2_Related_Organization__c.object-meta.xml
<CustomObject>
    <label>G2 Related Organization</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>G2 Related Organization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G2 Related Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>