force-app/main/default/objects/G2Crowd__G2_Related_Organization__c/fields/G2Crowd__G2_Unique_Related_Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Unique_Related_Organization_ID__c</fullName>
    <formula>G2Crowd__G2_Visiting_Organization__c &amp; &apos;::&apos; &amp; G2Crowd__Lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>G2 Unique Related Organization ID</label>
    <type>Text</type>
</CustomField>