force-app/main/default/objects/G2Crowd__G2_Related_Organization__c/fields/G2Crowd__G2_Visiting_Organization__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Visiting_Organization__c</fullName>
    <label>G2 Visiting Organization</label>
    <referenceTo>G2Crowd__G2_Visiting_Organization__c</referenceTo>
    <relationshipLabel>G2 Related Organizations</relationshipLabel>
    <relationshipName>G2_Related_Organizations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>