force-app/main/default/objects/G2Crowd__G2_Related_Organization__c/fields/G2Crowd__Lead__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>G2 Related Organizations</relationshipLabel>
    <relationshipName>G2_Related_Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>